# sharepoint

./: .gitignore  README.md  pyproject.toml  teste.py
meu_pacote_funcoes/: __init__.py  funcoes.py
