[project]
name = "meu-pacote-funcoes"
version = "0.1.0"
description = "Pacote interno com funcoes uteis para a equipe"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Seu Nome", email = "seu.email@empresa.com.br" }
]
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
